syntax = "proto3";

option csharp_namespace = "UserService.Presentation";

package greet;

service Greeter {
  rpc SubtractTokenFromBalance (SubtractTokenFromBalanceRequest) returns (SubtractTokenFromBalanceResponse);
}

message SubtractTokenFromBalanceRequest {
  string user_id = 1;
}

message SubtractTokenFromBalanceResponse {
  
}